# healthscan

./: .gitignore  CONTEXT.md  README.md  package.json  pyproject.toml
db/: schema.sql
docs/: cms-research-plan.md  coverage-summary.md
public/: app.js  index.html  styles.css
scripts/: apply_quality_flags.py  audit_price_type_coverage.py  audit_thin_procedure_candidate_codes.py  build_combined_search_results.py  build_indexing_expansion_worklist.py  build_layer4_breadth_gap_report.py  build_layer4_scan_matrix.py  build_translation_expansion_report.py  discover_sandiego_mrfs.py  extract_pdf_images.py  extract_pdf_text.py  frontend_search.py  frontend_server.py  migrate_combined_search_to_sqlite.py  run_claude_fallback_smoke.py  run_claude_fallback_validation.py  run_cms_integration_validation.py  run_layer1_index_csv_ranges.py  run_layer1_index_scripps_sample.py  run_layer1_index_ucla.py  run_layer1_index_ucsd_range.py  run_layer2_initial_coverage.py  run_layer3_search_export.py  run_layer4_fast_price_type_reindex.py  run_layer4_local_scan_batch.py  run_layer4_scan_engine_audit.py  run_phase1_discovery.py  run_phase2_thin_reindex.py  run_quality_filter_audit.py  run_socal_functionality_test.py  run_targeted_cpt_dry_run.py  run_translation_validation.py  scan_layer2_alternate_codes.py  scan_layer2_csv_offsets.py  scan_layer2_providence_alternates.py  scan_layer2_providence_offsets.py  scan_layer2_rady_full.py  scan_layer2_ucsd_offsets.py  validate_phase2_thin_frontend.py
tests/: test_claude_fallback.py  test_cli.py  test_cms_query.py  test_combined_search_migration.py  (+13 more)
(+91 files in other folders)
